--- a/html/chi_siamo.html
+++ b/html/chi_siamo.html
@@ -20,8 +20,9 @@
   <div class="page">
     <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
-      <nav id="menu">
-        <ul>
+      <nav id="menu" aria-labelledby="menu-label">
+        <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
+        <ul aria-labelledby="menu-label">
           <li lang="en"><a href="../../">Home</a></li>
           <li><a href="../Scommetti/scommesse.php">Scommesse</a></li>
           <li><a href="../Visualizzazione_Gare/gare.php">Gare</a></li>
@@ -30,7 +31,7 @@
         </ul>
       </nav>
 
-      <ul id="breadcrumb">
+      <ul id="breadcrumb" aria-label="Ti trovi in:">
         <li lang="en">Home</li>
         <li>Chi siamo</li>
       </ul>
