--- a/html/admin/aggiungiGaraNoJs.html
+++ b/html/admin/aggiungiGaraNoJs.html
@@ -19,8 +19,9 @@
   <div class="page">
     <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
-      <nav id="menu">
-        <ul>
+      <nav id="menu" aria-labelledby="menu-label">
+        <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
+        <ul aria-labelledby="menu-label">
           <li lang="en"><a href="admin.php">Dashboard</a></li>
           <li><a href='../../php/Scommetti/scommetti.php'>Scommesse</a></li>
           <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
@@ -30,7 +31,7 @@
           <autenticazione />
         </ul>
       </nav>
-      <ul id="breadcrumb">
+      <ul id="breadcrumb" aria-label="Ti trovi in:">
         <li><span lang="en">Dashboard</span> amministratore</li>
         <li>Aggiungi gara</li>
       </ul>
