--- a/html/autenticazione/login.html
+++ b/html/autenticazione/login.html
@@ -21,8 +21,9 @@
   <div class="page">
     <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
-      <nav id="menu">
-        <ul>
+      <nav id="menu" aria-labelledby="menu-label">
+        <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
+        <ul aria-labelledby="menu-label">
           <li lang="en"><a href="../../index.php">Home</a></li>
           <li><a href="../../php/Scommetti/scommetti.php">Scommesse</a></li>
           <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
@@ -32,7 +33,7 @@
           <li><a href='../../php/Autenticazione/register.php'>Registrati</a></li>
         </ul>
       </nav>
-      <ul id="breadcrumb">
+      <ul id="breadcrumb" aria-label="Ti trovi in:">
         <li lang="eng">Home</li>
         <li>Risultati gare</li>
       </ul>
