--- a/html/cavalli/cavalli.html
+++ b/html/cavalli/cavalli.html
@@ -22,8 +22,10 @@
     <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
 
-      <nav id="menu">
-        <ul>
+      <nav id="menu" aria-labelledby="menu-label">
+        <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
+        <ul aria-labelledby="menu-label">le</h2>
+        <ul aria-labelledby="menu-label">
           <li><a href="../../">Home</a></li>
           <li><a href="../Scommetti/scommetti.php">Scommesse</a></li>
           <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
@@ -34,7 +36,7 @@
         </ul>
       </nav>
 
-      <ul id="breadcrumb">
+      <ul id="breadcrumb" aria-label="Ti trovi in:">
         <li lang="en">Home</li>
         <li>Cavalli</li>
       </ul>
