--- a/html/scommesse/scommesseUtente.html
+++ b/html/scommesse/scommesseUtente.html
@@ -22,8 +22,9 @@
     <a href="#content" class="visually-hidden">Vai al contenuto</a>
     <div class="navbar">
 
-      <nav id="menu">
-        <ul aria-label="Menù principale">
+      <nav id="menu" aria-labelledby="menu-label">
+        <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
+        <ul aria-labelledby="menu-label">
           <li lang="en"><a href="../../">Home</a></li>
           <li><a href='scommetti.php'>Scommesse</a></li>
           <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
@@ -34,7 +35,7 @@
         </ul>
       </nav>
 
-      <ul id="breadcrumb">
+      <ul id="breadcrumb" aria-label="Ti trovi in:">
         <li lang="en">Home</li>
         <li>Scommesse</li>
         <li>Storico Scommesse</li>
