--- a/html/autenticazione/login.html
+++ b/html/autenticazione/login.html
@@ -40,6 +40,7 @@
     </div>
 
     <main id="content">
+      <risultato-verifica />
       <form method="post" name="Form" action="login.php" aria-labelledby="form-header">
         <h2 id="form-header">Login</h2>
         <label for="username"><span>Username</span></label>
