--- a/html/autenticazione/register.html
+++ b/html/autenticazione/register.html
@@ -43,6 +43,7 @@
     </div>
 
     <main id="content">
+      <risultato-verifica />
       <form method="post" onsubmit="return validazioneInput()" action="register.php" id="register" aria-labelledby="form-header">
         <h2 id="form-header">Registrazione</h2>
         <label for="username"><span>Username</span></label>
