Contenuto pagina "chi siamo"
- Corretto errore di battitura nel footer
- Aggiunto ; alla fine delle query sul db

--- a/html/cavalli/cavalli.html
+++ b/html/cavalli/cavalli.html
@@ -24,7 +24,6 @@
 
       <nav id="menu" aria-labelledby="menu-label">
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
-        <ul aria-labelledby="menu-label">le</h2>
         <ul aria-labelledby="menu-label">
           <li><a href="../../">Home</a></li>
           <li><a href="../Scommetti/scommetti.php">Scommesse</a></li>
@@ -49,7 +48,7 @@
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
       <div id="copyright">
         <p>
-          Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le vincite sono incoraggiate solo se giustificate dalla succeessiva perdita di una somma maggiore di denaro. L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte dell'utente; al contrario, si prende con gioia tutto il capitale.
+          Questo sito incoraggia vivamente allo spendere tutti i propri soldi sulla piattaforma NO₂¯ (Nitrito). Le vincite sono incoraggiate solo se giustificate dalla successiva perdita di una somma maggiore di denaro. L'ippodromo non si prende alcuna responsabilità in caso di perdita di tutto il proprio capitale da parte dell'utente; al contrario, si prende con gioia tutto il capitale.
         </p>
         <div id="authors">
           <p>Quelli che si pigliano i tuoi soldi: </p>
