--- a/html/chi_siamo.html
+++ b/html/chi_siamo.html
@@ -70,7 +70,7 @@
           <li class="authorCard">
             <h3>Sam</h3>
             <p>
-              Nat* in un paesino verso le montagne, fin dalla nascita ha dimostrat* grandi doti culinarie. Purtroppo non ha mai coltivat* questa sua passione in quanto odiava cucinare. Ha <del>sprecato</del> dedicato quindi la sua vita in lotte di polli clandestine fino al giorno in cui gli proposer* di essere il custode di un nuovo ippodromo molto speciale...
+              Nat* in un paesino verso le montagne, fin dalla nascita ha dimostrat* grandi doti culinarie. Purtroppo non ha mai coltivat* questa sua passione in quanto odiava cucinare. Ha <del>sprecato...</del> dedicato quindi la sua vita in lotte di polli clandestine fino al giorno in cui gli proposer* di essere il custode di un nuovo ippodromo molto speciale...
             </p>
             <img src="../../images/sam_pfp.png" alt="" />
           </li>
