Rinominate cartelle/aggiornati link, aggiunto ritiro cavalli nella card

--- a/html/cavalli/cavalloSelezionato.html
+++ b/html/cavalli/cavalloSelezionato.html
@@ -31,8 +31,8 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li><a href="../../">Home</a></li>
-          <li><a href="../Scommetti/scommetti.php">Scommesse</a></li>
-          <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
+          <li><a href="../scommesse/scommetti.php">Scommesse</a></li>
+          <li><a href="../gare/risultati.php">Gare</a></li>
           <li><a href='cavalli.php'>Cavalli</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <admin />
