--- a/html/scommesse/scommesse.html
+++ b/html/scommesse/scommesse.html
@@ -28,8 +28,8 @@
         <ul aria-labelledby="menu-label">
           <li lang="en"><a href="../../">Home</a></li>
           <li>Scommesse</li>
-          <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
-          <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="../gare/risultati.php">Gare</a></li>
+          <li><a href="../cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <admin />
           <autenticazione /> <!-- controlla sulla sessione per vedere se aggiungere login/register o logut -->
