--- a/html/admin/adminNoJs.html
+++ b/html/admin/adminNoJs.html
@@ -22,9 +22,9 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en">Dashboard</li>
-          <li><a href='../../php/Scommetti/scommetti.php'>Scommesse</a></li>
-          <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
-          <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
+          <li><a href='../../php/scommesse/scommetti.php'>Scommesse</a></li>
+          <li><a href="../../php/cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="../../php/gare/risultati.php">Gare</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <li><a href="../../">Abbandona dashboard</a></li>
           <autenticazione />
@@ -42,7 +42,7 @@
           </dt>
           <dd>
             <p><num-cavalli /></p>
-            <p><a href="../../php/Admin/gestisciCavalli.php">Gestici i cavalli</a></p>
+            <p><a href="../../php/admin/gestisciCavalli.php">Gestici i cavalli</a></p>
           </dd>
         </dl>
           <dt>
