--- a/html/admin/aggiungiCavallo.html
+++ b/html/admin/aggiungiCavallo.html
@@ -22,9 +22,9 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en"><a href="admin.php">Dashboard</a></li>
-          <li><a href='../../php/Scommetti/scommetti.php'>Scommesse</a></li>
-          <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
-          <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
+          <li><a href='../../php/scommesse/scommetti.php'>Scommesse</a></li>
+          <li><a href="../cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="../gare/risultati.php">Gare</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <li><a href="../../">Abbandona dashboard</a></li>
           <autenticazione />
@@ -38,7 +38,7 @@
     </div>
     <main id="content">
       <risultato-inserimento />
-      <form method="post" action="../../php/Admin/aggiungiCavallo.php" id="inserimentoCavallo" enctype="multipart/form-data" aria-labelledby="form-header">
+      <form method="post" action="../../php/admin/aggiungiCavallo.php" id="inserimentoCavallo" enctype="multipart/form-data" aria-labelledby="form-header">
         <h2 id="form-header">Inserisci i dati riguardanti il nuovo cavallo!</h2>
         <label for="name"><span>Nome</span></label>
         <input type="text" id="name" placeholder="Nome Cavallo" name="nome" maxlength="50" aria-label="Nome cavallo" required="required"><br />
