--- a/html/admin/aggiungiGaraNoJs.html
+++ b/html/admin/aggiungiGaraNoJs.html
@@ -23,9 +23,9 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en"><a href="admin.php">Dashboard</a></li>
-          <li><a href='../../php/Scommetti/scommetti.php'>Scommesse</a></li>
-          <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
-          <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
+          <li><a href='../../php/scommesse/scommetti.php'>Scommesse</a></li>
+          <li><a href="../cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="../gare/risultati.php">Gare</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <li><a href="../../">Abbandona dashboard</a></li>
           <autenticazione />
@@ -38,7 +38,7 @@
     </div>
     <main id="content">
       <risultati-inserimento />
-      <form method="post" action="../../php/Admin/aggiungiGaraNoJs.php" id="inserimentoGara" aria-labelledby="form-header">
+      <form method="post" action="../../php/admin/aggiungiGaraNoJs.php" id="inserimentoGara" aria-labelledby="form-header">
         <h2 id="form-header">Inserisci le informazioni della gara</h2>
         <p>In ogni gara corrono almeno 4 cavalli e non più di 8 cavalli</p>
         <label for="date"><span>Data gara (GG/MM/AAAA)</span></label>
