--- a/html/admin/gestisciCavalli.html
+++ b/html/admin/gestisciCavalli.html
@@ -22,9 +22,9 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en"><a href="admin.php">Dashboard</a></li>
-          <li><a href='../../php/Scommetti/scommetti.php'>Scommesse</a></li>
-          <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
-          <li><a href="../Visualizzazione_Gare/risultati.php">Gare</a></li>
+          <li><a href='../../php/scommesse/scommetti.php'>Scommesse</a></li>
+          <li><a href="../cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="../gare/risultati.php">Gare</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <li><a href="../../">Abbandona dashboard</a></li>
           <autenticazione />
