--- a/html/autenticazione/login.html
+++ b/html/autenticazione/login.html
@@ -25,9 +25,9 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en"><a href="../../index.php">Home</a></li>
-          <li><a href="../../php/Scommetti/scommetti.php">Scommesse</a></li>
-          <li><a href="../../php/Visualizzazione_Gare/risultati.php">Gare</a></li>
-          <li><a href="../../php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="../../php/scommesse/scommetti.php">Scommesse</a></li>
+          <li><a href="../../php/gare/risultati.php">Gare</a></li>
+          <li><a href="../../php/cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <li>Login</li>
           <li><a href='../../php/Autenticazione/register.php'>Registrati</a></li>
