--- a/html/chi_siamo.html
+++ b/html/chi_siamo.html
@@ -24,9 +24,9 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en"><a href="../../">Home</a></li>
-          <li><a href="../Scommetti/scommesse.php">Scommesse</a></li>
-          <li><a href="../Visualizzazione_Gare/gare.php">Gare</a></li>
-          <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="../../scommesse/scommesse.php">Scommesse</a></li>
+          <li><a href="../../gare/gare.php">Gare</a></li>
+          <li><a href="../../cavalli/cavalli.php">Cavalli</a></li>
           <li>Chi siamo</li>
           <admin />
           <autenticazione />
