--- a/html/gare/risultati.html
+++ b/html/gare/risultati.html
@@ -27,9 +27,9 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en"><a href="../../">Home</a></li>
-          <li><a href="../Scommetti/scommetti.php">Scommesse</a></li>
+          <li><a href="../scommesse/scommetti.php">Scommesse</a></li>
           <li>Gare</li>
-          <li><a href="../Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href="../cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
           <admin />
           <autenticazione />
