--- a/html/index.html
+++ b/html/index.html
@@ -28,9 +28,9 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en">Home</li>
-          <li><a href='php/Scommetti/scommetti.php'>Scommesse</a></li>
-          <li><a href="php/Visualizzazione_Gare/risultati.php">Gare</a></li>
-          <li><a href="php/Visualizzazione_Cavalli/cavalli.php">Cavalli</a></li>
+          <li><a href='php/scommesse/scommetti.php'>Scommesse</a></li>
+          <li><a href="php/gare/risultati.php">Gare</a></li>
+          <li><a href="php/cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="php/info/chi_siamo.php">Chi siamo</a></li>
           <admin />
           <autenticazione /> <!-- controlla sulla sessione per vedere se aggiungere login/register o logut -->
