--- a/html/chi_siamo.html
+++ b/html/chi_siamo.html
@@ -40,7 +40,7 @@
     </div>
     <main id="content">
       <h2>Perché esiste <strong>Ippodromo NO₂¯</strong>?</h2>
-      <p>
+      <p class="brw-back">
         Risposta breve: <em>fare soldi</em>. Può forse esserci motivo migliore? Noi crediamo di no, ed è per questo che dalla nostra creazione non facciamo altro che cercare in tutti i modi di <em>fregare</em> chi scommette sulle corse nel nostro ippodromo. A dire il vero, l'unico motivo per cui all'inizio abbiamo portato corse di ippopotami è perché permettevano di avere un margine maggiore nel breve termine, in termini monetari e di propolarità. Questo ci ha permesso di creare una struttura più grande per le corse di cavalli, che ci ha permesso di avere un margine molto più grande sul lungo termine per via del maggior numero di clienti e di scommesse ad alto rischio.
       </p>
       <div class="authorsInfo">
@@ -48,31 +48,31 @@
         <ul>
           <li class="authorCard" aria-labelledby="authors-list-header">
             <h3>Cecio</h3>
-            <p>
+            <p class="brw-back">
               Burbero uomo di mezza altezza il quale, abbandonato alla nascita dai genitori, è nato e cresciuto in un branco di ippopotami. Dopo i suoi studi però (anche se fallimentari) è riuscito a comprendere il linguaggio di quelle magnifiche creature e quindi a poterle sfruttare per i suoi fini!
             </p>
-            <img src="../../images/cecio_pfp.png" alt="" />
+            <img src="../../images/cecio_pfp.png" alt="" class="imgContent" />
           </li>
           <li class="authorCard">
             <h3>Dam</h3>
-            <p>
+            <p class="brw-back">
               Nessuno sa nulla di lui, se non il fatto che abbia una grande passione per le buste. Comunica con il resto del team esclusivamente tramite buste di lettera, scrivendo da un lato l'indirizzo del destinatario e dall'altro il contenuto del messaggio. Nessuno sa perché metta anche l'indirizzo, dato che poi utilizza un piccione viaggiatore per recapitare la busta e riceve risposte solo tramite chat perché non vuole si scopra il suo indirizzo. Che individuo misterioso...
             </p>
-            <img src="../../images/dam_pfp.png" alt="" />
+            <img src="../../images/dam_pfp.png" alt="" class="imgContent" />
           </li>
           <li class="authorCard">
             <h3>Martz</h3>
-            <p>
+            <p class="brw-back">
               Gentile uomo d’affari il cui sogno è quello di vivere una notte di giorno. Ovviamente questa impresa non è così semplice, dato che i paesi Nordici ove in alcuni periodi il sole è sempre alto, non sono validi. Questo sogno l’ha portato a voler accumulare più denaro possibile per finanziare gli studi per compiere la sua impresa.
             </p>
-            <img src="../../images/martz_pfp.png" alt="" />
+            <img src="../../images/martz_pfp.png" alt="" class="imgContent" />
           </li>
           <li class="authorCard">
             <h3>Sam</h3>
-            <p>
+            <p class="brw-back">
               Nat* in un paesino verso le montagne, fin dalla nascita ha dimostrat* grandi doti culinarie. Purtroppo non ha mai coltivat* questa sua passione in quanto odiava cucinare. Ha <del>sprecato...</del> dedicato quindi la sua vita in lotte di polli clandestine fino al giorno in cui gli proposer* di essere il custode di un nuovo ippodromo molto speciale...
             </p>
-            <img src="../../images/sam_pfp.png" alt="" />
+            <img src="../../images/sam_pfp.png" alt="" class="imgContent" />
           </li>
         </ul>
       </div>
