--- a/html/index.html
+++ b/html/index.html
@@ -44,23 +44,23 @@
 
     <main id="content">
       <dl class="content center-element">
-          <dt>Il nostro ippodromo</dt>
+          <dt><h2>Il nostro ippodromo</h2></dt>
           <dd class="flex-home">
-            <p>
+            <p class="brw-back">
               Questo ippodromo nasce come pista per corse clandestine di ippopotami, ma col tempo i soldi che abbiamo rubato dai nostri clienti ci hanno permesso di espandere le nostre gare anche ai cavalli, uno degli animali più seguiti dagli scommettitori incalliti, il che ci ha permesso di fare ancora più soldi.
             </p>
             <img src="images/ippodromo.jpg" class="imgContent center-element" alt="Vista aerea notturna dell'Ippodromo NO₂¯" />
           </dd>
-        <dt>Scommesse</dt>
+        <dt><h2>Scommesse</h2></dt>
         <dd>
-          <p>
+          <p class="brw-back">
               Grazie all'internet, possiamo fare ancora più soldi! Registrati sul nostro sito per avere la possibilità di poter scommettere anche da casa sulle gare del nostro ippodromo.
           </p>
           <img src="images/gambling_horses.jpg" class="imgContent center-element" alt="" />
         </dd>
-        <dt>Valuta virtuale: Bitscuits</dt>
+        <dt><h2>Valuta virtuale: Bitscuits</h2></dt>
         <dd>
-          <p>
+          <p class="brw-back">
             Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario Otterrai un po' di bitscuits gratuiti se decidi di registrarti, per farti credere che puoi anche vincere scommettendo!
           </p>
           <img src="images/bitsquit.png" class="imgContent center-element" alt="Un bisotto in 8 bit, simbolo della valuta" />
