Aggiunti controllo no JS per scommesse. Sistemati path "Chi siamo"
Aggiunti controllo no JS per scommesse. Sistemati path "Chi siamo"

--- a/html/scommesse/scommesse.html
+++ b/html/scommesse/scommesse.html
@@ -3,6 +3,10 @@
 
 <head>
   <title>Scommetti - Ippodromo NO₂¯</title> <!-- oppure &#8322; -->
+  <noscript>
+    <style>html{display:none;}</style>
+    <meta http-equiv="refresh" content="0.0;url=../../php/scommesse/scommettiNoJs.php">
+  </noscript>
   <meta name="title" content="Scommetti - Ippodromo NO₂¯" />
   <meta name="description" content="" />
   <meta name="keywords" content="" />
