Sezione head completata con tutti i tag meta

--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -2,17 +2,21 @@
 <html lang="it">
 
 <head>
-  <title>Dashboard amministratore - Ippodromo NO₂¯</title> <!-- oppure &#8322; -->
   <noscript>
     <style>html{display:none;}</style>
     <meta http-equiv="refresh" content="0.0;url=../../php/admin/adminNoJs.php">
   </noscript>
-  <meta name="title" content="Dashboard amministratore - Ippodromo NO₂¯" />
   <meta charset="UTF-8">
+  <title>Dashboard amministratore - Ippodromo NO₂¯</title> <!-- oppure &#8322; -->
+  <meta name="title" content="Dashboard amministratore - Ippodromo NO₂¯" />
+  <meta name="description" content="Pannello amministratore dell'ippodromo NO₂¯" />
+  <meta name="keywords" content="ippodromo, no2, nitrito, cavalli, scommesse, corse, fantini, ippopotami" />
+  <meta name="author" content="Francesco Dallan (Cecio), Damiano Mason (Dam), Matteo Martini (Martz), Samuele Sartor (Sam)" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/small.css" media="screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
+  <link rel="icon" href="../../images/logo.jpeg" />
 </head>
 
 <body>
@@ -53,23 +57,22 @@
             </h3>
             <p><a href="gestisciCavalli.php" class="centerLink">Gestisci i cavalli</a></p>
           </dd>
-        </dl>
-        <dt>
-          <h2>Gare</h2>
-        </dt>
-        <dd>
-          <h3 class="brw-back"><num-gare /></h3>
-          <p><a href="../../php/admin/aggiungiGara.php" class="centerLink">Crea nuove gare</a></p>
-        </dd>
-        <dt>
-          <h2>Risultati</h2>
-        </dt>
-        <dd>
-          <h3 class="brw-back">
-            <num-risultati />
-          </h3>
-          <p><a href="aggiungiRisultati.php" class="centerLink">Aggiungi risultati alle gare concluse</a></p>
-        </dd>
+          <dt>
+            <h2>Gare</h2>
+          </dt>
+          <dd>
+            <h3 class="brw-back"><num-gare /></h3>
+            <p><a href="../../php/admin/aggiungiGara.php" class="centerLink">Crea nuove gare</a></p>
+          </dd>
+          <dt>
+            <h2>Risultati</h2>
+          </dt>
+          <dd>
+            <h3 class="brw-back">
+              <num-risultati />
+            </h3>
+            <p><a href="aggiungiRisultati.php" class="centerLink">Aggiungi risultati alle gare concluse</a></p>
+          </dd>
         </dl>
       </nav>
       <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
