--- a/html/admin/adminNoJs.html
+++ b/html/admin/adminNoJs.html
@@ -2,13 +2,17 @@
 <html lang="it">
 
 <head>
+  <meta charset="UTF-8">
   <title>Dashboard amministratore - Ippodromo NO₂¯</title> <!-- oppure &#8322; -->
   <meta name="title" content="Dashboard amministratore - Ippodromo NO₂¯" />
-  <meta charset="UTF-8">
+  <meta name="description" content="Pannello amministratore dell'ippodromo NO₂¯" />
+  <meta name="keywords" content="ippodromo, no2, nitrito, cavalli, scommesse, corse, fantini, ippopotami" />
+  <meta name="author" content="Francesco Dallan (Cecio), Damiano Mason (Dam), Matteo Martini (Martz), Samuele Sartor (Sam)" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/small.css" media="screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
+  <link rel="icon" href="../../images/logo.jpeg" />
 </head>
 
 <body>
@@ -41,23 +45,23 @@
             <h2>Cavalli</h2>
           </dt>
           <dd>
-            <p><num-cavalli /></p>
-            <p><a href="../../php/admin/gestisciCavalli.php">Gestici i cavalli</a></p>
+            <h3 class="brw-back"><num-cavalli /></h3>
+            <p><a href="../../php/admin/gestisciCavalli.php" class="centerLink">Gestici i cavalli</a></p>
           </dd>
         </dl>
           <dt>
             <h2>Gare</h2>
           </dt>
           <dd>
-            <p><num-gare /></p>
-            <p><a href="../../php/admin/aggiungiGaraNoJs.php">Crea nuove gare</a></p>
+            <h3 class="brw-back"><num-gare /></h3>
+            <p><a href="../../php/admin/aggiungiGaraNoJs.php" class="centerLink">Crea nuove gare</a></p>
           </dd>
           <dt>
             <h2>Risultati</h2>
           </dt>
           <dd>
-            <p><num-risultati /></p>
-            <p><a href="../../php/admin/aggiungiRisultatiNoJs.php">Aggiungi risultati alle gare concluse</a></p>
+            <h3 class="brw-back"><num-risultati /></h3>
+            <p><a href="../../php/admin/aggiungiRisultatiNoJs.php" class="centerLink">Aggiungi risultati alle gare concluse</a></p>
           </dd>
         </dl>
       </nav>
