--- a/html/chi_siamo.html
+++ b/html/chi_siamo.html
@@ -2,15 +2,17 @@
 <html lang="it">
 
 <head>
+  <meta charset="UTF-8">
   <title>Chi siamo - Ippodromo NO₂¯</title> <!-- oppure &#8322; -->
   <meta name="title" content="Chi siamo - Ippodromo NO₂¯" />
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
-  <meta charset="UTF-8">
+  <meta name="description" content="informazioni sui creatori dell'Ippodromo NO₂¯" />
+  <meta name="keywords" content="ippodromo, no2, nitrito, francesco dallan, damiano mason, matteo martini, samuele sartor, cecio, dam, martz, sam" />
+  <meta name="author" content="Francesco Dallan (Cecio), Damiano Mason (Dam), Matteo Martini (Martz), Samuele Sartor (Sam)" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/small.css" media="screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
+  <link rel="icon" href="../../images/logo.jpeg" />
 </head>
 
 <body>
