--- a/html/admin/aggiungiGaraNoJs.html
+++ b/html/admin/aggiungiGaraNoJs.html
@@ -2,14 +2,17 @@
 <html lang="it">
 
 <head>
+  <meta charset="UTF-8">
   <title>Aggiungi Gara - Ippodromo NO₂¯</title>
   <meta name="title" content="Aggiungi gara - Ippodromo NO₂¯" />
-  <meta charset="UTF-8">
+  <meta name="description" content="Pagina amministratore per aggiungere una gara all'ippodromo NO₂¯" />
+  <meta name="keywords" content="ippodromo, no2, nitrito, cavalli, scommesse, corse, fantini, ippopotami" />
+  <meta name="author" content="Francesco Dallan (Cecio), Damiano Mason (Dam), Matteo Martini (Martz), Samuele Sartor (Sam)" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/small.css" media="screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
-
+  <link rel="icon" href="../../images/logo.jpeg" />
 </head>
 
 <body>
