--- a/html/admin/inserisciRisultati.html
+++ b/html/admin/inserisciRisultati.html
@@ -2,17 +2,21 @@
 <html lang="it">
 
 <head>
-  <title>Inserisci risultati - Ippodromo NO₂¯</title>
   <noscript>
     <style>html{display:none;}</style>
     <meta http-equiv="refresh" content="0.0;url=inserisciRisultatiNoJs.html">
   </noscript>
-  <meta name="title" content="inserisci risultati - Ippodromo NO₂¯" />
   <meta charset="UTF-8">
+  <title>Inserisci risultati - Ippodromo NO₂¯</title>
+  <meta name="title" content="Inserisci risultati - Ippodromo NO₂¯" />
+  <meta name="description" content="Pagina amministratore per inserire i risultati di una gara avvenuta all'ippodromo NO₂¯" />
+  <meta name="keywords" content="ippodromo, no2, nitrito, cavalli, scommesse, corse, fantini, ippopotami" />
+  <meta name="author" content="Francesco Dallan (Cecio), Damiano Mason (Dam), Matteo Martini (Martz), Samuele Sartor (Sam)" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/small.css" media="screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
+  <link rel="icon" href="../../images/logo.jpeg" />
   <script type="text/javascript" src="../../script/controlli.js"></script>
 
 </head>
