--- a/html/cavalli/cavalli.html
+++ b/html/cavalli/cavalli.html
@@ -2,15 +2,17 @@
 <html lang="it">
 
 <head>
+  <meta charset="UTF-8">
   <title>Cavalli - Ippodromo NO₂¯</title>
   <meta name="title" content="Cavalli - Ippodromo NO₂¯" />
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
-  <meta charset="UTF-8">
+  <meta name="description" content="Lista dei cavalli che corrono all'Ippodromo NO₂¯" />
+  <meta name="keywords" content="cavalli, corse, ippodromo, no2, nitrito, scommesse" />
+  <meta name="author" content="Francesco Dallan (Cecio), Damiano Mason (Dam), Matteo Martini (Martz), Samuele Sartor (Sam)" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/small.css" media="screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
+  <link rel="icon" href="../../images/logo.jpeg" />
 </head>
 
 <body>
