--- a/html/index.html
+++ b/html/index.html
@@ -2,15 +2,17 @@
 <html lang="it">
 
 <head>
+  <meta charset="UTF-8">
   <title>Ippodromo NO₂¯</title> <!-- nitrito hihihihi -->
   <meta name="title" content="Ippodromo NO₂¯" />
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
-  <meta charset="UTF-8">
+  <meta name="description" content="Ippodromo NO₂¯ è il sito per l'omonimo ippodromo sul quale puoi scommettere in tempo reale da qualsiasi posizione, vedere le informazioni dei nostri cavalli e controllare tutti i risultati delle gare concluse" />
+  <meta name="keywords" content="ippodromo, no2, nitrito, cavalli, scommesse, corse, fantini, ippopotami" />
+  <meta name="author" content="Francesco Dallan (Cecio), Damiano Mason (Dam), Matteo Martini (Martz), Samuele Sartor (Sam)" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="style/style.css" media="screen and (min-width: 1025px)" />
-  <link rel="stylesheet" type="text/css" href="style/small.css" media="handheld, screen and (max-width: 1025px)" />
+  <link rel="stylesheet" type="text/css" href="style/small.css" media="screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="style/print.css" media="print" />
+  <link rel="icon" href="images/logo.jpeg" />
 </head>
 
 <body>
@@ -44,17 +46,17 @@
 
     <main id="content">
       <dl class="content center-element">
-          <dt><h2>Il nostro ippodromo</h2></dt>
-          <dd class="flex-home">
-            <p class="brw-back">
-              Questo ippodromo nasce come pista per corse clandestine di ippopotami, ma col tempo i soldi che abbiamo rubato dai nostri clienti ci hanno permesso di espandere le nostre gare anche ai cavalli, uno degli animali più seguiti dagli scommettitori incalliti, il che ci ha permesso di fare ancora più soldi.
-            </p>
-            <img src="images/ippodromo.jpg" class="imgContent center-element" alt="Vista aerea notturna dell'Ippodromo NO₂¯" />
-          </dd>
+        <dt><h2>Il nostro ippodromo</h2></dt>
+        <dd class="flex-home">
+          <p class="brw-back">
+            Questo ippodromo nasce come pista per <strong>corse clandestine</strong> di ippopotami, ma col tempo i soldi che abbiamo "<em>preso in prestito</em>" dai nostri clienti ci hanno permesso di espandere le nostre gare anche ai cavalli, uno degli animali più seguiti dagli scommettitori incalliti, il che ci ha permesso di fare ancora più soldi.
+          </p>
+          <img src="images/ippodromo.jpg" class="imgContent center-element" alt="Vista aerea notturna dell'Ippodromo NO₂¯" />
+        </dd>
         <dt><h2>Scommesse</h2></dt>
         <dd>
           <p class="brw-back">
-              Grazie all'internet, possiamo fare ancora più soldi! Registrati sul nostro sito per avere la possibilità di poter scommettere anche da casa sulle gare del nostro ippodromo.
+              Grazie all'internet, possiamo fare ancora più <strong>soldi</strong>! Registrati sul nostro sito per avere la possibilità di poter <strong>scommettere</strong> anche da casa sulle gare del nostro ippodromo.
           </p>
           <img src="images/gambling_horses.jpg" class="imgContent center-element" alt="" />
         </dd>
