--- a/html/scommesse/confirmScommessa.html
+++ b/html/scommesse/confirmScommessa.html
@@ -2,17 +2,19 @@
 <html lang="it">
 
 <head>
+  <meta charset="UTF-8">
   <title>
     Conferma scommessa - Ippodromo NO₂¯
   </title>
   <meta name="title" content="Conferma scommessa - Ippodromo NO₂¯" />
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
-  <meta charset="UTF-8">
+  <meta name="description" content="Conferma il cavallo e la quantità da puntare sulla gara selezionata all'Ippodromo NO₂¯" />
+  <meta name="keywords" content="scommesse, cavalli, corse, ippodromo, no2, nitrito" />
+  <meta name="author" content="Francesco Dallan (Cecio), Damiano Mason (Dam), Matteo Martini (Martz), Samuele Sartor (Sam)" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/small.css" media="screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
+  <link rel="icon" href="../../images/logo.jpeg" />
 </head>
 
 <body>
