--- a/html/scommesse/garaScommessaNoJs.html
+++ b/html/scommesse/garaScommessaNoJs.html
@@ -2,15 +2,17 @@
 <html lang="it">
 
 <head>
+  <meta charset="UTF-8">
   <title>Scommetti - Ippodromo NO₂¯</title> <!-- oppure &#8322; -->
   <meta name="title" content="Scommetti - Ippodromo NO₂¯" />
-  <meta name="description" content="" />
-  <meta name="keywords" content="" />
-  <meta charset="UTF-8">
+  <meta name="description" content="Scegli su che cavallo e quanto puntare per la gara <id-gara /> dell'Ippodromo NO₂¯" />
+  <meta name="keywords" content="scommesse, cavalli, corse, ippodromo, no2, nitrito" />
+  <meta name="author" content="Francesco Dallan (Cecio), Damiano Mason (Dam), Matteo Martini (Martz), Samuele Sartor (Sam)" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" type="text/css" href="../../style/style.css" media="screen and (min-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/small.css" media="screen and (max-width: 1025px)" />
   <link rel="stylesheet" type="text/css" href="../../style/print.css" media="print" />
+  <link rel="icon" href="../../images/logo.jpeg" />
 </head>
 
 <body>
