--- a/html/admin/aggiungiGaraNoJs.html
+++ b/html/admin/aggiungiGaraNoJs.html
@@ -34,7 +34,8 @@
           <autenticazione />
         </ul>
       </nav>
-      <ul id="breadcrumb" aria-label="Ti trovi in:">
+      <ul id="breadcrumb">
+        <li class="visually-hidden">Ti trovi in:</li>
         <li><span lang="en">Dashboard</span> amministratore</li>
         <li>Aggiungi gara</li>
       </ul>
