--- a/html/admin/inserisciRisultatiNoJs.html
+++ b/html/admin/inserisciRisultatiNoJs.html
@@ -34,7 +34,8 @@
           <autenticazione />
         </ul>
       </nav>
-      <ul id="breadcrumb" aria-label="Ti trovi in:">
+      <ul id="breadcrumb">
+        <li class="visually-hidden">Ti trovi in:</li>
         <li><span lang="en">Dashboard</span> amministratore</li>
         <li>Inserisci risultati</li>
       </ul>
@@ -43,6 +44,8 @@
       <risultato-inserimento />
       <lista-gare />
       <inserimento-gara-selezionata />
+      <torna-indietro />
+      <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
     <footer>
       <img class="logo" src="../../images/logo.jpeg" alt="Logo Ippodromo NO₂¯" />
