--- a/html/autenticazione/register.html
+++ b/html/autenticazione/register.html
@@ -37,7 +37,8 @@
         </ul>
       </nav>
     
-      <ul id="breadcrumb" aria-label="Ti trovi in:">
+      <ul id="breadcrumb">
+        <li class="visually-hidden">Ti trovi in:</li>
         <li lang="en">Home</li>
         <li>Registrazione</li>
       </ul>
