--- a/html/index.html
+++ b/html/index.html
@@ -39,33 +39,34 @@
         </ul>
       </nav>
 
-      <ul id="breadcrumb" aria-label="Ti trovi in:">
+      <ul id="breadcrumb">
+        <li class="visually-hidden">Ti trovi in:</li>
         <li lang="en">Home</li>
       </ul>
     </div>
 
     <main id="content">
-      <dl class="content center-element">
+      <dl class="content">
         <dt><h2>Il nostro ippodromo</h2></dt>
         <dd class="flex-home">
           <p class="brw-back">
             Questo ippodromo nasce come pista per <strong>corse clandestine</strong> di ippopotami, ma col tempo i soldi che abbiamo "<em>preso in prestito</em>" dai nostri clienti ci hanno permesso di espandere le nostre gare anche ai cavalli, uno degli animali più seguiti dagli scommettitori incalliti, il che ci ha permesso di fare ancora più soldi.
           </p>
-          <img src="images/ippodromo.jpg" class="imgContent center-element" alt="Vista aerea notturna dell'Ippodromo NO₂¯" />
+          <img src="images/ippodromo.jpg" class="imgContent" alt="Vista aerea notturna dell'Ippodromo NO₂¯" />
         </dd>
         <dt><h2>Scommesse</h2></dt>
         <dd>
           <p class="brw-back">
               Grazie all'internet, possiamo fare ancora più <strong>soldi</strong>! Registrati sul nostro sito per avere la possibilità di poter <strong>scommettere</strong> anche da casa sulle gare del nostro ippodromo.
           </p>
-          <img src="images/gambling_horses.jpg" class="imgContent center-element" alt="" />
+          <img src="images/gambling_horses.jpg" class="imgContent" alt="" />
         </dd>
         <dt><h2>Valuta virtuale: Bitscuits</h2></dt>
         <dd>
           <p class="brw-back">
             Utilizza la nostra valuta per scommettere e non dover accedere di continuo al tuo conto bancario Otterrai un po' di bitscuits gratuiti se decidi di registrarti, per farti credere che puoi anche vincere scommettendo!
           </p>
-          <img src="images/bitsquit.png" class="imgContent center-element" alt="Un bisotto in 8 bit, simbolo della valuta" />
+          <img src="images/bitsquit.png" class="imgContent" alt="Un bisotto in 8 bit, simbolo della valuta" />
         </dd>
       </dl>
       <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
