--- a/html/scommesse/confirmScommessa.html
+++ b/html/scommesse/confirmScommessa.html
@@ -42,7 +42,8 @@
         </ul>
       </nav>
 
-      <ul id="breadcrumb" aria-label="Ti trovi in:">
+      <ul id="breadcrumb">
+        <li class="visually-hidden">Ti trovi in:</li>
         <li lang="en">Home</li>
         <li>Scommesse</li>
         <li>Conferma scommessa</li>
