--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -38,13 +38,14 @@
           <autenticazione />
         </ul>
       </nav>
-      <ul id="breadcrumb" aria-label="Ti trovi in:">
+      <ul id="breadcrumb">
+        <li class="visually-hidden">Ti trovi in:</li>
         <li><span lang="en">Dashboard</span> amministratore</li>
       </ul>
     </div>
 
     <main id="content">
-      <nav class="center-element">
+      <nav >
         <!-- questa cosa va mostrata solo se si è loggati, se non lo si è bisogna reindirizzare al login -->
         <dl id="db-cards">
           <!-- aggiungere delle icone in css -->
