--- a/html/admin/inserisciRisultati.html
+++ b/html/admin/inserisciRisultati.html
@@ -40,7 +40,8 @@
           <autenticazione />
         </ul>
       </nav>
-      <ul id="breadcrumb" aria-label="Ti trovi in:">
+      <ul id="breadcrumb">
+        <li class="visually-hidden">Ti trovi in:</li>
         <li><span lang="en">Dashboard</span> amministratore</li>
         <li>Inserisci risultati</li>
       </ul>
@@ -49,6 +50,7 @@
       <risultato-inserimento />
       <lista-gare />
       <inserimento-gara-selezionata />
+      <torna-indietro />
       <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
     <footer>
