--- a/html/autenticazione/login.html
+++ b/html/autenticazione/login.html
@@ -35,7 +35,8 @@
           <li><a href='../../php/Autenticazione/register.php'>Registrati</a></li>
         </ul>
       </nav>
-      <ul id="breadcrumb" aria-label="Ti trovi in:">
+      <ul id="breadcrumb">
+        <li class="visually-hidden">Ti trovi in:</li>
         <li lang="eng">Home</li>
         <li>Risultati gare</li>
       </ul>
