--- a/html/chi_siamo.html
+++ b/html/chi_siamo.html
@@ -35,7 +35,8 @@
         </ul>
       </nav>
 
-      <ul id="breadcrumb" aria-label="Ti trovi in:">
+      <ul id="breadcrumb">
+        <li class="visually-hidden">Ti trovi in:</li>
         <li lang="en">Home</li>
         <li>Chi siamo</li>
       </ul>
