--- a/html/gare/garaSelezionata.html
+++ b/html/gare/garaSelezionata.html
@@ -38,7 +38,8 @@
         </ul>
       </nav>
 
-      <ul id="breadcrumb" aria-label="Ti trovi in:">
+      <ul id="breadcrumb">
+        <li class="visually-hidden">Ti trovi in:</li>
           <li lang="en">Home</li>
           <li>Risultati Gare</li>
           <li>Classifica Gara <id-gara /></li>
