--- a/html/scommesse/garaScommessa.html
+++ b/html/scommesse/garaScommessa.html
@@ -35,7 +35,7 @@
         <h2 id="menu-label" class="visually-hidden">Menù principale</h2>
         <ul aria-labelledby="menu-label">
           <li lang="en"><a href="../../">Home</a></li>
-          <li>Scommesse</li>
+          <li><a href="../../php/scommesse/scommetti.php">Scommesse</a></li>
           <li><a href="../gare/risultati.php">Gare</a></li>
           <li><a href="../cavalli/cavalli.php">Cavalli</a></li>
           <li><a href="../info/chi_siamo.php">Chi siamo</a></li>
@@ -44,7 +44,8 @@
         </ul>
       </nav>
 
-      <ul id="breadcrumb" aria-label="Ti trovi in:">
+      <ul id="breadcrumb">
+        <li class="visually-hidden">Ti trovi in:</li>
 		  <li lang="en">Home</li>
         <li>Scommesse</li>
         <li>Gara <id-gara /></li>
@@ -56,7 +57,7 @@
 
       <form />
 
-      
+      <a href="./scommetti.php" class="centerLink">Torna indietro</a>
       <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
     </main>
 
