fix grafica generale

--- a/html/admin/aggiungiCavallo.html
+++ b/html/admin/aggiungiCavallo.html
@@ -54,7 +54,7 @@
         <input type="file" name="img" id="img" accept="image/*" aria-label="Foto cavallo" required="required">
         <label for="description"><span>Descrizione</span></label>
         <textarea id="description" rows="4" cols="50" name="descrizione" placeholder="Inserire una breve descrizione del cavallo" aria-label="Descrizione" required="required"></textarea>
-        <input id="submit-cavallo" type="submit" value="Aggiungi il nuovo cavallo alla lista!" name="submit" />
+        <input id="submit-cavallo" type="submit" value="Aggiungi il cavallo!" name="submit" />
       </form>
       <a href="./gestisciCavalli.php" class="centerLink">Torna indietro</a>
       <a href="#menu" class="visually-hidden go-back-button">Torna al menù</a>
