Rimossa class brw-back, fix dl in index, aggiunte notifiche di campo obbligatorio per screen reader
ora gli elementi in index hanno tutti la stessa classe

--- a/html/admin/admin.html
+++ b/html/admin/admin.html
@@ -53,7 +53,7 @@
             <h2>Cavalli</h2>
           </dt>
           <dd>
-            <h3 class="brw-back">
+            <h3>
               <num-cavalli />
             </h3>
             <p><a href="gestisciCavalli.php" class="centerLink">Gestisci i cavalli</a></p>
@@ -62,14 +62,14 @@
             <h2>Gare</h2>
           </dt>
           <dd>
-            <h3 class="brw-back"><num-gare /></h3>
+            <h3><num-gare /></h3>
             <p><a href="../../php/admin/aggiungiGara.php" class="centerLink">Crea nuove gare</a></p>
           </dd>
           <dt>
             <h2>Risultati</h2>
           </dt>
           <dd>
-            <h3 class="brw-back">
+            <h3>
               <num-risultati />
             </h3>
             <p><a href="aggiungiRisultati.php" class="centerLink">Aggiungi risultati alle gare concluse</a></p>
