--- a/html/admin/adminNoJs.html
+++ b/html/admin/adminNoJs.html
@@ -46,7 +46,7 @@
             <h2>Cavalli</h2>
           </dt>
           <dd>
-            <h3 class="brw-back"><num-cavalli /></h3>
+            <h3><num-cavalli /></h3>
             <p><a href="../../php/admin/gestisciCavalli.php" class="centerLink">Gestici i cavalli</a></p>
           </dd>
         </dl>
@@ -54,14 +54,14 @@
             <h2>Gare</h2>
           </dt>
           <dd>
-            <h3 class="brw-back"><num-gare /></h3>
+            <h3><num-gare /></h3>
             <p><a href="../../php/admin/aggiungiGaraNoJs.php" class="centerLink">Crea nuove gare</a></p>
           </dd>
           <dt>
             <h2>Risultati</h2>
           </dt>
           <dd>
-            <h3 class="brw-back"><num-risultati /></h3>
+            <h3><num-risultati /></h3>
             <p><a href="../../php/admin/aggiungiRisultatiNoJs.php" class="centerLink">Aggiungi risultati alle gare concluse</a></p>
           </dd>
         </dl>
