--- a/html/admin/aggiungiCavallo.html
+++ b/html/admin/aggiungiCavallo.html
@@ -45,14 +45,14 @@
       <risultato-inserimento />
       <form method="post" action="../../php/admin/aggiungiCavallo.php" id="inserimentoCavallo" enctype="multipart/form-data" aria-labelledby="form-header">
         <h2 id="form-header">Inserisci i dati riguardanti il nuovo cavallo!</h2>
-        <label for="name"><span>Nome</span></label>
-        <input type="text" id="name" placeholder="Nome Cavallo" name="nome" maxlength="50" aria-label="Nome cavallo" required="required"><br />
-        <label for="speed"><span>Velocità</span></label>
+        <label for="name"><span>Nome</span><span class="visually-hidden"> Richiesto</span></label>
+        <input type="text" id="name" placeholder="Nome Cavallo" name="nome" maxlength="50" aria-label="Nome cavallo" required="required" />
+        <label for="speed"><span>Velocità</span><span class="visually-hidden"> Richiesto</span></label>
         <input type="number" id="speed" placeholder="Inserire velocità del cavallo" name="velocita" value="5"
-          min="1" max="10" aria-label="Velocità" required="required">
-        <label for="img"><span>Foto cavallo</span></label>
-        <input type="file" name="img" id="img" accept="image/*" aria-label="Foto cavallo" required="required">
-        <label for="description"><span>Descrizione</span></label>
+          min="1" max="10" aria-label="Velocità" required="required" />
+        <label for="img"><span>Foto cavallo</span><span class="visually-hidden"> Richiesto</span></label>
+        <input type="file" name="img" id="img" accept="image/*" aria-label="Foto cavallo" required="required" />
+        <label for="description"><span>Descrizione</span><span class="visually-hidden"> Richiesto</span></label>
         <textarea id="description" rows="4" cols="50" name="descrizione" placeholder="Inserire una breve descrizione del cavallo" aria-label="Descrizione" required="required"></textarea>
         <input id="submit-cavallo" type="submit" value="Aggiungi il cavallo!" name="submit" />
       </form>
