--- a/html/admin/aggiungiGara.html
+++ b/html/admin/aggiungiGara.html
@@ -50,12 +50,12 @@
       <form method="post" action="aggiungiGara.php" id="inserimentoGara" aria-labelledby="form-header">
         <h2 id="form-header">Inserisci le informazioni della gara</h2>
         <p>In ogni gara corrono almeno 4 cavalli e non più di 8 cavalli</p>
-        <label for="date"><span>Data gara (GG/MM/AAAA)</span></label>
-        <input type="date" id="date" name="date" aria-label="Data gara (giorno/mese/anno)" required="required">
-        <label for="time"><span>Orario gara (HH/MM)</span></label>
-        <input type="time" id="time" name="time" min="08:00:00" max="22:00:00" aria-label="Orario gara (ore/minuti)" required="required">
+        <label for="date"><span>Data gara (GG/MM/AAAA)</span><span class="visually-hidden"> Richiesto</span></label>
+        <input type="date" id="date" name="date" aria-label="Data gara (giorno/mese/anno)" required="required" />
+        <label for="time"><span>Orario gara (HH/MM)</span><span class="visually-hidden"> Richiesto</span></label>
+        <input type="time" id="time" name="time" min="08:00:00" max="22:00:00" aria-label="Orario gara (ore/minuti)" required="required" />
         <fieldset id="horses">
-          <legend>Cavalli:</legend>
+          <legend>Cavalli:<span class="visually-hidden"> Richiesto</span></legend>
           <cavalli />
         </fieldset>
         <span>
